# Nota

./: .gitignore  CMakeLists.txt  DEVELOPER.md  FFI参考方案.md  Nota.md  README.md  RoadMap.md  agents.md  build.py  example.nota  output.html  output_logic.html  sample.nota  test.nota
src/: AST.h  AST.hpp  ASTPrinter.cpp  ASTPrinter.h  AstPrinter.cpp  AstPrinter.h  CMakeLists.txt  CodeGen.cpp  CodeGenerator.cpp  CodeGenerator.hpp  Compiler.cpp  ComponentRegistry.cpp  Environment.cpp  Environment.h  Evaluator.cpp  Expr.h  Generator.cpp  Generator.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Lexer.hpp  ModuleManager.cpp  Nota.cpp  Nota.h  NotaArray.cpp  NotaClass.cpp  NotaFunction.cpp  NotaInstance.cpp  NotaLambda.cpp  Parser.cpp  Parser.h  Parser.hpp  Resolver.cpp  Return.cpp  RuntimeError.h  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Stmt.h  (+26 more)
src/AST/: Expr.h  Stmt.h
src/analyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h
src/app/: main.cpp
src/ast/: AST.h  ASTFwd.h  ASTNode.h  ASTPrinter.cpp  ASTPrinter.h  ASTUtils.cpp  ASTUtils.h  Expr.h  ExprNodes.h  PrettyPrinter.cpp  PrettyPrinter.h  Stmt.h  StmtNodes.h  Visitor.h
src/cli/: CMakeLists.txt
src/codegen/: CodeGenerator.cpp  CodeGenerator.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h
src/common/: SourceLocation.h
src/compiler/: Compiler.cpp  Compiler.h  Compiler.hpp
src/core/: AST.hpp  Chunk.cpp  Chunk.hpp  Error.h  NotaObject.hpp  NotaValue.hpp  OpCode.hpp  StringObject.hpp  Symbol.h  Token.h  Token.hpp  Type.h  Version.h  placeholder.cpp
src/debug/: Disassembler.cpp  Disassembler.hpp
src/include/: AST.hpp  ComponentRegistry.hpp  Generator.hpp  Lexer.hpp  Parser.hpp  Token.hpp
src/lexer/: Lexer.cpp  Lexer.h  Lexer.hpp  Token.h  Tokenizer.cpp  Tokenizer.h
src/lib/: AST.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Environment.cpp  Environment.h  Expr.h  FFI.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  ModuleLoader.cpp  ModuleLoader.h  NotaArray.h  NotaCallable.h  NotaFunction.cpp  NotaFunction.h  NotaObjects.cpp  NotaObjects.h  Object.cpp  Object.h  Parser.cpp  Parser.h  StdLib.cpp  StdLib.h  Stmt.h  SymbolTable.cpp  SymbolTable.h  Token.h  VM.cpp  VM.h  Value.cpp  Value.h  nota.cpp  nota.h
src/nota_core/: CMakeLists.txt
src/nota_test/: CMakeLists.txt  main.cpp
src/parser/: Parser.cpp  Parser.h  Parser.hpp
src/vm/: Chunk.cpp  Chunk.h  Disassembler.cpp  Disassembler.h  Object.cpp  Object.h  OpCode.h  VM.cpp  VM.h  VM.hpp  Value.cpp  Value.h  bytecode.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
tests/: AST_test.cpp  ArrayTest.cpp  AstPrinter.test.cpp  CMakeLists.txt  ClassTest.cpp  CodeGenTest.cpp  CodeGeneratorTests.cpp  CompilerTest.cpp  ExpressionTest.cpp  InitialTest.cpp  Interpreter.test.cpp  InterpreterTest.cpp  InterpreterTests.cpp  LambdaParserTest.cpp  Lexer.test.cpp  LexerBasicsTest.cpp  LexerOperatorsTest.cpp  LexerTest.cpp  LexerTests.cpp  Lexer_test.cpp  ModuleTest.cpp  PackageTest.cpp  Parser.test.cpp  ParserImportTest.cpp  ParserModuleTest.cpp  ParserTest.cpp  ParserTests.cpp  Parser_test.cpp  Placeholder.cpp  ResolverTest.cpp  SemanticAnalyzerTests.cpp  StaticArrayTest.cpp  TestHelper.cpp  TestHelper.h  TestLexer.cpp  TestParser.cpp  VMTest.cpp  compiler_test.cpp  custom_component.nota  demo.nota  (+95 more)
tests/analyzer/: EventHandlerValidationTests.cpp  SemanticAnalyzerTests.cpp  StateValidationTests.cpp
tests/codegen/: CodeGeneratorTests.cpp  EventHandlerGenerationTests.cpp  EventHandlerTests.cpp  ExpressionErrorTests.cpp  ExpressionEvaluationTests.cpp  ItemComponentTests.cpp  RootExpressionTests.cpp  StateManagementTests.cpp
tests/core/: test_nota_value.cpp
tests/golden/: custom_component.css  custom_component.html  custom_component.nota  expression_evaluation.css  expression_evaluation.nota  more_properties.css  more_properties.html  more_properties.nota  positioning.css  positioning.html  positioning.nota  property_override.css  property_override.nota  simple.css  simple.html  simple.nota
tests/lexer/: LexerTests.cpp  test_lexer.cpp
tests/modules/: Button.nota
tests/parser/: EventHandlerTests.cpp  ParserTests.cpp  StateParsingTests.cpp  test_parser.cpp
tests/pkg/: Button.nota
tests/test_files/: module_a.nota  module_b.nota  module_c.nota  relative_module.nota  test_cli.nota
tests/transitive/: A.nota  B.nota  C.nota
tests/vm/: test_vm.cpp
(+77 files in other folders)
